<resources>
    <string name="app_name">meteoapp</string>
    <string name="title_activity_main">We4ther</string>
    <string name="title_home">Home</string>
    <string name="title_oggi">Oggi</string>
    <string name="title_Domani">Domani</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_Search">Search</string>
    <string name="title_home_city_region">${city},${region}</string>
    <string name="home_card_day_of_week">OGGI</string>
    <string name="minTempGrad">22°</string>
    <string name="maxTempGrad">31°</string>
    <string name="date_home_screen_card">10/09</string>
    <string name="minTemp">min</string>
    <string name="maxTemp">max</string>
    <string name="rainfallNum_homeCard">0%</string>
    <string name="windNum_homeCard">12kmh</string>
    <string name="precep_descr_Home">precep.</string>
    <string name="test_space" />
    <string name="wind_descr_Home">vento</string>
    <string name="next_days_home_fragment">prossimi 5 giorni</string>

    //DAY OF THE WEEK
    <string name="lunedi">Lunedi</string>
    <string name="martedi">Martedi</string>
    <string name="mercoledi">Mercoledi</string>
    <string name="giovedi">Giovedi</string>
    <string name="venerdi">Venerdi</string>
    <string name="sabato">Sabato</string>
    <string name="domenica">Domenica</string>

    // CITY AND REGION
    <string name="city_region_home">Palermo,Sicilia</string>

    // TEXT VIEW TOMORROW SCREEN
    <string name="tv_hour_00">%02d:00</string>
    <string name="tv_temperature">%d C°</string>
    <string name="tv_percRain">%d cm</string>
    <string name="tv_humRainCov">%d%%</string>
    <string name="tv_uvIndex">%d/10</string>
    <string name="tv_kmWind">%d km/h</string>
    <string name="today">OGGI</string>
    <string name="tomorrow">DOMANI</string>
    <string name="title_tom_city_region">${city}, ${region}</string>

    // SEARCH FRAG CARD
    <string name="search_frag_card_city">Palermo</string>
    <string name="search_frag_card_temp">12°</string>
    <string name="search_frag_card_weather">soleggiato</string>
    // FRAGMENT SEARCH
    <string name="search_view_search_fragment">Cerca città</string>
    <string name="recent_research_search_fragment">Ricerche recenti</string>

    //TODAY VIEW SCREEN
    <string name="today_hour">%02d:00</string>
    <string name="today_temperature">%d C°</string>
    <string name="today_rain">%d cm</string>
    <string name="today_coverage">%d%%</string>
    <string name="today_uv">%d/10</string>
    <string name="today_wind">%d km/h</string>
    <string name="today_humidity">%d%%</string>
    <string name="today_precipitations">%d%%</string>
    <string name="today_perceived">%d°</string>
    <string name="today_title_city">%s, </string>
    <string name="today_title_region">%s</string>
    <string name="today_title_date">%d</string>
    <string name="button_to_speech">button to speech</string>
    <string name="image_error">Image Error</string>
    <string name="error_fragment_message">C’è stato un problema con il caricamento dei tuoi dati. Verifica la tua rete e riprova.</string>
    <string name="riprova">Riprova</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="weatherimage">WeatherImage</string>
    <string name="search_frag_card_region">Sicilia</string>
    <string name="choosen_day_text">Giorno :</string>
    <string name="tomorrow_title_text">Domani,</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Permission</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Microphone permission</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settingsimage">settingsImage</string>
    <string name="settingsTitle">Settings</string>
    <string name="geoLocalTest">Geolocalisation permission</string>
    <string name="refresh">refresh</string>
</resources>