<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_layout"
    style="@style/Widget.Meteoapp.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_bg_container"
    android:clickable="true"
    android:gravity="center"
    android:orientation="horizontal"
    android:theme="@style/Theme.Meteoapp.AppWidgetContainer">

    <LinearLayout
        android:id="@+id/widget_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/widget_bg_elements"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">


        <TextView
            android:id="@+id/appwidget_city"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/widget_bg_elements"
            android:contentDescription="@string/appwidget_text"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/city_region_home"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/weatherimage"
            android:src="@drawable/sun" />

        <TextView
            android:id="@+id/appwidget_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/widget_bg_elements"
            android:text="@string/maxTempGrad"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>