<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_screen"
    tools:context=".ui.search.SearchFragment"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:background="@color/background_screen"
        android:contentDescription="@string/settingsimage"
        android:scaleType="fitXY"
        android:src="@drawable/options" />

    <SearchView
        android:id="@+id/SearchBarSearchFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/universal_margin_dx_sx"
        android:layout_marginTop="@dimen/search_frag_margin_top_sv"
        android:layout_marginEnd="@dimen/universal_margin_dx_sx"
        android:autofillHints="Cerca città"
        android:background="@drawable/searchview_background"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        android:queryHint="@string/search_view_search_fragment"
        android:searchIcon="@drawable/search" />
    <ImageButton
        android:id="@+id/btn_to_speech"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/voice"
        android:scaleType="fitXY"
        android:background="@color/background_screen"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/button_to_speech" />

    <TextView
        android:id="@+id/tv_recent_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/universal_margin_dx_sx"
        android:layout_marginTop="20dp"
        android:text="@string/recent_research_search_fragment"
        android:textColor="@color/search_fragment_recent_research"
        android:textSize="@dimen/search_frag_text_size_recent_research"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSearchFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/universal_margin_dx_sx"
        android:layout_marginTop="@dimen/universal_margin_dx_sx"
        android:layout_marginEnd="@dimen/universal_margin_dx_sx"
        android:paddingBottom="@dimen/search_frag_rv_padding_bottom"
        tools:listitem="@layout/search_fragment_card" />


</LinearLayout>