<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutAnimation="@anim/item_layout_animation"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    android:layoutAnimation="@anim/item_layout_animation"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:orientation="horizontal"
   >

   <TextView
       android:id="@+id/today_Hour"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/today_hour"
       android:textColor="#230EA5"
       android:textSize="16sp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginStart="24dp"
       />

   <ImageView
       android:id="@+id/today_Weather"
       android:layout_width="30dp"
       android:layout_height="30dp"
       android:src="@drawable/sun"
       android:layout_toEndOf="@id/today_Hour"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="@id/today_Hour"
       app:layout_constraintEnd_toEndOf="@id/today_Temperature"

             />

   <TextView
       android:id="@+id/today_Temperature"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/today_temperature"
       android:textColor="@color/black"
       android:textSize="16sp"
       android:textStyle="bold"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       />

   <ImageView
       android:id="@+id/today_PrecipitationsView"
       android:layout_width="15.5dp"
       android:layout_height="20.5dp"
       android:src="@drawable/drop"
       app:layout_constraintEnd_toStartOf="@id/today_PrecipitationsText"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"/>

   <TextView
       android:id="@+id/today_PrecipitationsText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/today_precipitations"
       android:textColor="@color/black"
       app:layout_constraintStart_toEndOf="@id/today_Temperature"
       app:layout_constraintEnd_toStartOf="@id/today_arrow"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
      />

   <ImageView
       android:id="@+id/today_arrow"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       android:src="@drawable/arrow"
       android:layout_marginEnd="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>

   <ImageView
       android:id="@+id/firstLine"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:src="@drawable/vector_1"
       android:paddingBottom="18dp"
       android:paddingTop="16dp"
       app:layout_constraintTop_toBottomOf="@id/row" />

   <androidx.cardview.widget.CardView
       android:id="@+id/today_infoCard"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginStart="24dp"
       android:layout_marginTop="23dp"
       android:layout_marginEnd="24dp"
       android:layout_marginBottom="45dp"
       android:paddingBottom="30dp"
       app:cardElevation="8dp"
       android:visibility="gone"
       app:cardCornerRadius="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/firstLine">

      <TextView
          android:id="@+id/today_cardPerceived"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="18dp"
          android:layout_marginTop="18dp"
          android:text="Percepita"
          android:textColor="@color/black"
          android:textSize="16sp" />

      <TextView
          android:id="@+id/today_cardPerceivedVal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="18dp"
          android:layout_marginTop="37dp"
          android:text="@string/today_perceived"
          android:textColor="@color/black"
          android:textSize="16sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/today_cardUv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="198dp"
          android:layout_marginTop="18dp"
          android:text="Indice UV"
          android:textColor="@color/black"
          android:textSize="16sp" />

      <TextView
          android:id="@+id/today_cardUvVal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="198dp"
          android:layout_marginTop="37dp"
          android:text="@string/today_uv"
          android:textColor="@color/black"
          android:textSize="16sp"
          android:textStyle="bold" />

      <ImageView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:src="@drawable/vector_1"
          android:layout_marginTop="70dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"/>

      <TextView
          android:id="@+id/today_cardHumidity"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="18dp"
          android:layout_marginTop="84dp"
          android:text="Umidità"
          android:textColor="@color/black"
          android:textSize="16sp" />

      <TextView
          android:id="@+id/today_cardHumidityVal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="18dp"
          android:layout_marginTop="106dp"
          android:text="@string/today_humidity"
          android:textColor="@color/black"
          android:textSize="16sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/today_cardWind"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="198dp"
          android:layout_marginTop="84dp"
          android:text="Vento"
          android:textColor="@color/black"
          android:textSize="16sp" />

      <TextView
          android:id="@+id/today_cardWindVal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="198dp"
          android:layout_marginTop="106dp"
          android:text="@string/today_wind"
          android:textColor="@color/black"
          android:textSize="16sp"
          android:textStyle="bold" />
      <ImageView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:src="@drawable/vector_1"
          android:layout_marginTop="140dp"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"/>

      <TextView
          android:id="@+id/today_cardCoverage"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="18dp"
          android:layout_marginTop="153dp"
          android:text="Copertura"
          android:textColor="@color/black"
          android:textSize="16sp" />

      <TextView
          android:id="@+id/today_cardCoverageVal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="18dp"
          android:layout_marginTop="175dp"
          android:layout_marginBottom="19dp"
          android:text="@string/today_coverage"
          android:textColor="@color/black"
          android:textSize="16sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/today_cardRain"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="198dp"
          android:layout_marginTop="153dp"
          android:text="Pioggia"
          android:textColor="@color/black"
          android:textSize="16sp" />

      <TextView
          android:id="@+id/today_cardRainVal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="198dp"
          android:layout_marginTop="175dp"
          android:text="@string/today_rain"
          android:textColor="@color/black"
          android:textSize="16sp"
          android:textStyle="bold" />


   </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>